# faultybox

./: .gitignore  Cargo.toml  Makefile.toml  ci-secrets.yaml  flake.nix  rust-toolchain.toml
frontend/: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  yarn.nix
frontend/assets/: style.scss
frontend/src/: api_client.rs  app.rs  main.rs
frontend/src/pages/: gecko.rs  index.rs  mod.rs
frontend/src/pages/room/: create.rs  create.scss  join.rs  lobby.rs  lobby.scss  mod.rs  reducer.rs  socket.rs
frontend/src/pages/room/lobby/: mod.rs  nameplate.rs  reducer.rs
frontend/styles/: style.scss
models/: Cargo.toml
models/src/: lib.rs  room.rs  ws.rs
models/src/room/: api.rs  mod.rs
nix/: checks.nix  module.nix  network.nix  packages.nix
server/: Cargo.toml
server/src/: main.rs  ws.rs
server/src/api/: gecko-topics.ron  gecko.rs  mod.rs  room.rs
server/src/api/room/: README.md  auth.rs  create.rs  join.rs  mod.rs  socket.rs
