[workspace]
members = [ "server", "frontend", "models" ]
resolver = "2"

[workspace.dependencies]
models = { path = "./models" }
log = "0.4.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
smol_str = { version = "0.3.2", features = ["serde"] }
lazy_static = "1.4"
rand = "0.8"

[workspace.package]
version = "0.1.0"

[workspace.metadata.crane]
name = "faultybox"