[package]
name = "frontend"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models.workspace = true
log.workspace = true
serde_json.workspace = true
console_error_panic_hook = "0.1.7"
gloo-net = "0.6.0"
futures = "0.3.31"
patternfly-yew = { version = "0.6", features = ["tree", "icons-fab"] }
wasm-bindgen = "=0.2.95" # Must match version in nixpkgs
wasm-bindgen-futures = "0.4.45"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = [ "csr" ]}
yew-router = "0.18.0"