[package]
name = "models"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
smol_str.workspace = true
rand.workspace = true

# Must match the version used by yew
implicit-clone = { version = "0.4.9" }
serde_arrays = "0.1"
