[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models.workspace = true
lazy_static.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true

axum = "0.6.1"
axum-extra = { version = "0.4.2", features = ["spa"] }
clap = { version = "4.0.32", features = ["derive"] }
ron = "0.8"
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
