[package]
name = "server"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models.workspace = true
lazy_static.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true

# axum suck at <0.8 until axum-typed-websockets is updated (or we write our own)
axum = {version = "0.7.9", features = [ "macros", "ws" ] }
axum-typed-websockets = "0.6.0"
clap = { version = "4.0.32", features = ["derive"] }
ron = "0.8"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
