[package]
name = "server"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models.workspace = true
lazy_static.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true

# axum suck at <0.8 until axum-typed-websockets is updated (or we write our own)
axum = {version = "0.8.1", features = [ "macros", "ws" ] }
axum-extra = { version = "0.10.0", features = ["typed-header", "cookie"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
headers = "0.4.0"
jsonwebtoken = { version = "9.3", default-features = false }
ron = "0.8"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-journald = "0.3.1"
tracing-subscriber = "0.3.19"
